# cookiecutter_templates

./: README.md
uv-analysis/: cookiecutter.json
uv-analysis/hooks/: post_gen_project.sh
uv-analysis/{{cookiecutter.directory_name}}/: pyproject.toml
uv-library/: cookiecutter.json
uv-library/hooks/: post_gen_project.sh
uv-library/{{cookiecutter.directory_name}}/: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
uv-library/{{cookiecutter.directory_name}}/docs/: changelog.md  index.md
uv-library/{{cookiecutter.directory_name}}/docs/reference/: api.md
uv-library/{{cookiecutter.directory_name}}/scratch/: .gitignore  README.md  notebook.ipynb  pyproject.toml
uv-oneoff/: cookiecutter.json
uv-oneoff/hooks/: post_gen_project.sh
uv-oneoff/{{cookiecutter.directory_name}}/: notebook.ipynb  pyproject.toml
uv-task/hooks/: post_gen_project.sh
uv-task/{{cookiecutter.directory_name}}/: Dockerfile  README.md  check_filequeue.sh  cluster_var.env  delete_filequeue.sh  insert_tasks.py  process_template.sh  pyproject.toml  reset_filequeue.sh  run.py
uv-task/{{cookiecutter.directory_name}}/config/: cluster.env  task.env
uv-task/{{cookiecutter.directory_name}}/scripts/: process_template.sh
uv-task/{{cookiecutter.directory_name}}/src/{{ cookiecutter.project_slug }}/: task.py
uv-task/{{cookiecutter.directory_name}}/templates/: delete_cluster.sh  kube-task.yml  make_cluster.sh
