[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.initial_version }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
authors = [
    { name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.author_email }}" },
]

classifiers = [
    "License :: OSI Approved :: MIT License",
]

[dependency-groups]
dev = [
    "ipykernel",
]
lint = [
    "ruff",
]
profile = [
    "scalene",
    "pyinstrument",
]

[tool.uv]
default-groups = ["dev", "lint", "profile"]

[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select=["E9","F63","F7","F82"]

[tool.poe.tasks.profile-all]
cmd = "uv run scalene"
help = "Profile cpu and memory of task with scalene"

[tool.poe.tasks.profile]
cmd = "uv run pyinstrument -r html"
help = "Profile cpu of task with pyinstrument"