[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.initial_version }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]
authors = [
    { name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.author_email }}" },
]

classifiers = [
    "License :: OSI Approved :: MIT License",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ipykernel",
    "bump-my-version",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
lint = [
    "ruff"
]

[tool.uv]
default-groups = ["dev", "docs", "lint"]

[tool.bumpversion]
current_version = "{{ cookiecutter.initial_version }}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "v{new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "src/{{ cookiecutter.project_slug }}/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select=["E9","F63","F7","F82"]

[tool.poe.tasks.drybump]
cmd = "uv run bump-my-version bump --dry-run --verbose"
help = "Dry run of version bump for the project. Use with 'patch', 'minor', or 'major' to specify the version change."

[tool.poe.tasks.bump]
cmd = "uv run bump-my-version bump"
help = "Bump the version number in the project. Use with 'patch', 'minor', or 'major' to specify the version change."

[tool.poe.tasks.test]
cmd = "uv run pytest --cov={{ cookiecutter.project_slug }} tests"
help = "Run pytest with code coverage."