[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.0"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "ipykernel",
    "caveclient"
]
authors = [
    { name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.author_email }}" },
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select=["E9","F63","F7","F82"]
